# vulkan-objects

./: .gitignore  CMakeLists.txt  Makefile  camera.cpp  camera.h  code-quality.md  code-review.md  main.cpp  math.h  plan.md  quad.mesh  readme.md  spec.md  tga.cpp  tga.h  tri.frag  tri.vert  vertices.comp  vkobjects.cpp  vkobjects.h  vulkan.tga
demo/: camera.cpp  main.cpp  math.h  tga.h
demo/shaders/: blit.frag  cube.mesh  cubes.comp  fullscreen.mesh  shadow.frag  shadow.mesh
doc/: backlog.md  bindless.md  cookbook.md  indirect-dispatch.md  spec-accel-structure.md  spec.md
doc/features/: vma.md
include/: rid.h  vkobjects.h
src/: accel.cpp  barrier.cpp  buffer.cpp  camera.h  commands.cpp  frame.cpp  image.cpp  main.cpp  pch.h  pipeline.cpp  pipelinecache.cpp  pipelinecache.h  shaders.cpp  tga.cpp  timestamp.cpp  vkinternal.h  vkobjects.cpp  vkobjects.h
src/shaders/: cube.mesh  cubes.comp  shadow.frag  vertices.comp
tests/: accel_structure_tests.cpp
tests/shaders/: as_oracle.comp
